--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,6 @@
 {erl_opts, [
   debug_info
-  ,{parse_transform, lager_transform}
 ]}.
 {deps, [
-  {lager, "3.6.0"}
-  ,{amqp_client, "3.7.2"}
-  ,{rabbit_common, "3.7.2"}
+  {amqp_client, "3.7.2"}
 ]}.
